--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   fl_chart: ^0.9.0
   flutter_swiper: ^1.1.6
   http: ^0.12.0+4
+  date_format: ^1.0.8
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
